# OpenDSO2000

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_opendso2000.py
.github/workflows/: release.yml
opendso2000/: __init__.py  __main__.py  acquisition.py
opendso2000/res/: icon.icns
opendso2000/scope/: decode.py  driver.py  enums.py  models.py  processing.py  waveform.py
opendso2000/server/: __main__.py  app.py
opendso2000/server/static/: app.js  index.html  style.css
opendso2000/transport/: base.py  discovery.py  simulated.py  usbtmc.py
opendso2000/ui/: app.py  devicedialog.py  frontpanel.py  knob.py  mainwindow.py  menus.py  scopeview.py  screen.py  softkeys.py  style.py  widgets.py
packaging/: 99-opendso2000.rules  opendso2000.spec
tools/: make_icons.py
