[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "opendso2000"
version = "0.3.0"
description = "Cross-platform control software for Hantek DSO2C10/2C15/2D10/2D15 oscilloscopes"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "OpenDSO2000 contributors" }]
dependencies = [
    "numpy>=1.22",
    "pyusb>=1.2",
    "libusb-package>=1.0.26.2",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.scripts]
opendso2000 = "opendso2000.server.__main__:main"

[tool.setuptools]
packages = [
    "opendso2000",
    "opendso2000.transport",
    "opendso2000.scope",
    "opendso2000.server",
]

[tool.setuptools.package-data]
opendso2000 = ["res/*.svg", "res/*.png", "res/*.icns", "res/*.ico"]
"opendso2000.server" = ["static/*"]
